syntax = "proto2";

option java_outer_classname = "SocketDataProtos";


message SocketData{

    required string messageType = 1;

    required int32 messageId=2;

    required string text=3;

    required bytes data=4;

}
